--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:onClick="pulsado" />
 
             <Button
                 android:text="8"
@@ -55,7 +56,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:onClick="pulsado"  />
             <Button
                 android:text="9"
                 android:layout_width="0dp"
@@ -64,7 +66,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:onClick="pulsado"  />
 
             <Button
                 android:text="CE"
@@ -89,7 +92,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:onClick="pulsado"  />
 
             <Button
                 android:text="5"
@@ -99,7 +103,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:onClick="pulsado" />
 
             <Button
                 android:text="6"
@@ -109,7 +114,8 @@
                 android:layout_weight="1"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold|italic"/>
+                android:textStyle="bold|italic"
+                android:onClick="pulsado" />
 
             <Button
                 android:text="+"
